Features/customerPortal/force-app/main/default/objects/FreightTM__Load__c/fields/Customer_Portal_Delivery_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Customer_Portal_Delivery_Confirmed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer Portal Delivery Confirmed</label>
    <type>Checkbox</type>
</CustomField>