Features/customerPortal/force-app/main/default/objects/FreightTM__Load__c/fields/Customer_Portal_Invoice_Dispute_Message__c.field-meta.xml
<CustomField>
    <fullName>Customer_Portal_Invoice_Dispute_Message__c</fullName>
    <label>Customer Portal Invoice Dispute Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>