Features/customerPortal/force-app/main/default/objects/FreightTM__Load__c/fields/Customer_Portal_Invoice_Dispute_Status__c.field-meta.xml
<CustomField>
    <fullName>Customer_Portal_Invoice_Dispute_Status__c</fullName>
    <label>Customer Portal Invoice Dispute Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Resolved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>