Features/customerPortal/force-app/main/default/objects/FreightTM__Load__c/fields/Customer_Portal_Quote_Response_At__c.field-meta.xml
<CustomField>
    <fullName>Customer_Portal_Quote_Response_At__c</fullName>
    <label>Customer Portal Quote Response At</label>
    <type>DateTime</type>
</CustomField>