Features/customerPortal/force-app/main/default/objects/FreightTM__Load__c/fields/Customer_Portal_Quote_Response_Message__c.field-meta.xml
<CustomField>
    <fullName>Customer_Portal_Quote_Response_Message__c</fullName>
    <label>Customer Portal Quote Response Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>