Features/customerPortal/force-app/main/default/objects/FreightTM__Load__c/fields/Customer_Portal_Quote_Status__c.field-meta.xml
<CustomField>
    <fullName>Customer_Portal_Quote_Status__c</fullName>
    <label>Customer Portal Quote Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>