Features/customerPortal/force-app/main/default/objects/FreightTM__Load__c/fields/Customer_Visible_Tracking__c.field-meta.xml
<CustomField>
    <fullName>Customer_Visible_Tracking__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer Visible Tracking</label>
    <type>Checkbox</type>
</CustomField>