Features/customerPortal/force-app/main/default/objects/FreightTM__Load__c/fields/Driver_Current_Latitude__c.field-meta.xml
<CustomField>
    <fullName>Driver_Current_Latitude__c</fullName>
    <label>Driver Current Latitude</label>
    <precision>11</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>