Features/customerPortal/force-app/main/default/objects/FreightTM__Load__c/fields/Driver_Current_Location_Text__c.field-meta.xml
<CustomField>
    <fullName>Driver_Current_Location_Text__c</fullName>
    <label>Driver Current Location Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>