Features/customerPortal/force-app/main/default/objects/FreightTM__Load__c/fields/Driver_Last_GPS_Update__c.field-meta.xml
<CustomField>
    <fullName>Driver_Last_GPS_Update__c</fullName>
    <label>Driver Last GPS Update</label>
    <type>DateTime</type>
</CustomField>