Features/customerPortal/force-app/main/default/objects/FreightTM__Load__c/fields/Driver_Portal_Active__c.field-meta.xml
<CustomField>
    <fullName>Driver_Portal_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Driver_Portal_Active</label>
    <type>Checkbox</type>
</CustomField>