Features/customerPortal/force-app/main/default/objects/FreightTM__Load__c/fields/Driver_Portal_Expires_At__c.field-meta.xml
<CustomField>
    <fullName>Driver_Portal_Expires_At__c</fullName>
    <label>Driver_Portal_Expires_At</label>
    <type>DateTime</type>
</CustomField>