Features/customerPortal/force-app/main/default/objects/FreightTM__Load__c/fields/Driver_Portal_Token_Hash__c.field-meta.xml
<CustomField>
    <fullName>Driver_Portal_Token_Hash__c</fullName>
    <label>Driver_Portal_Token_Hash</label>
    <length>255</length>
    <type>Text</type>
</CustomField>