Features/customerPortal/force-app/main/default/objects/FreightTM__Load__c/fields/Route_Progress_Percent__c.field-meta.xml
<CustomField>
    <fullName>Route_Progress_Percent__c</fullName>
    <label>Route Progress Percent</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>