Features/customerPortal/force-app/main/default/objects/FreightTM__Load__c/fields/Tracking_Map_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Tracking_Map_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tracking Map Enabled</label>
    <type>Checkbox</type>
</CustomField>